<?xml version="1.0"?>
<package format="2">
	<name>snickerdoodle_plexus</name>
	<version>0.0.0</version>
	<description>roboy nervous system</description>
	<maintainer email="st@gi.ai">Simon Trendel</maintainer>
	<license>BSD</license>
	<buildtool_depend>catkin</buildtool_depend>
	<depend>roscpp</depend>
	<depend>message_runtime</depend>
	<export>
	</export>
</package>
